force-app/main/default/objects/Questionnaire_Item__c/Questionnaire_Item__c.object-meta.xml
<CustomObject>
    <label>Questionnaire Item</label>
    <nameField>
        <displayFormat>QI-{0000}</displayFormat>
        <label>Questionnaire Item Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questionnaire Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>