force-app/main/default/objects/Questionnaire_Item__c/fields/Assessment_Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Questionnaire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessment Questionnaire</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Questionnaire Items</relationshipLabel>
    <relationshipName>Questionnaire_Items</relationshipName>
    <type>Lookup</type>
</CustomField>