force-app/main/default/objects/Questionnaire_Item__c/fields/Needs_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Needs_Assessment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Needs Assessment</label>
    <referenceTo>Needs_Assessment__c</referenceTo>
    <relationshipLabel>Questionnaire Items</relationshipLabel>
    <relationshipName>Questionnaire_Items</relationshipName>
    <type>Lookup</type>
</CustomField>