force-app/main/default/objects/Questionnaire_Item__c/fields/Observed_Skills__c.field-meta.xml
<CustomField>
    <fullName>Observed_Skills__c</fullName>
    <formula>Assessment_Questionnaire__r.Question__c</formula>
    <label>Observed Skills</label>
    <type>Text</type>
</CustomField>