force-app/main/default/objects/Questionnaire_Item__c/fields/Question_Type__c.field-meta.xml
<CustomField>
    <fullName>Question_Type__c</fullName>
    <formula>CASE(Assessment_Questionnaire__r.Question_Type__c,
  &quot;General&quot;, &quot;General&quot;,
  &quot;Skill&quot;, &quot;Skill&quot;,
  &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Question Type</label>
    <type>Text</type>
</CustomField>