force-app/main/default/objects/Questionnaire_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Needs_Assessment__c</columns>
    <columns>Assessment_Questionnaire__c</columns>
    <columns>Result__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>